# SpaceCraft

./: CMakeLists.txt  Doxyfile  README  updatEngine.bat
data/: config.ini
data/blockView/: setup.ini
data/shader/: PlanetBadlandSands.frag  PlanetContinentalNoise.frag  PlanetNoiseFinal.frag  PlanetTerrainTypeNoise.frag  PlanetWithoutRiver.frag  gradientColor.frag  noise.frag  noise.vert  planet1.frag  planet1.vert  planet2.frag  planet2.vert  simple.frag  simple.vert  simpleRenderToTexture.vert  simpleUnpack.frag  sphere.frag  sphere.vert  subPlanetNoise.frag  subPlanetNoise.vert
import/include/: DREngineLogger.h  DRGeometrie.h  DRGeometrieIcoSphere.h  DRGeometrieSphere.h  DRIImage.h  DRINetwork.h  DRInterface.h  DRIvlc.h  DRRandom.h  DRSaveTexture.h  DRText.h  DRTextur.h  DRTexture.h  DRTextureManager.h  DRThread.h  DRVideoConfig.h  Engine2Main.h  glew.h
import/include/Core2/: Core2Main.h  DRColor.h  DRCubicSpline.h  DRDampingSpring.h  DRFile.h  DRFileManager.h  DRFrustumCulling.h  DRGameStateManager.h  DRHash.hpp  DRHashList.hpp  DRIResource.h  DRIndexReferenzHolder.h  DRIni.h  DRLogger.h  DRMatrix.h  DRMemoryList.h  DRObjekt.h  DRPlane.h  DRRandom.h  DRResourcePtr.h  DRResourcePtrHolder.h  DRUtils.h  DRVector2.h  DRVector2i.h  DRVector3.h  DRVector3i.h
import/include/sdl/: SDL_config.h  SDL_revision.h
include/: Block.h  BlockLoader.h  Camera.h  DRGeometrieHeightfield.h  DRGeometrieManager.h  DRTextureManager.h  GenerateNoisePlanet.h  GlobalRenderer.h  HeightMapTexture.h  Observer.h  Planet.h  Player.h  RenderBlock.h  Sektor.h  SektorChunk.h  SektorObject.h  Server.h  ShaderManager.h  ShaderProgram.h  StellarBody.h  Texture.h  Unit.h  Vector3Unit.h  main.h  noisecache.h  noiseutils.h  random.h
include/render/: GlobalRenderer.h  RenderBlock.h  RenderBlockLoader.h  RenderInStepsToTexture.h  RenderNoisePlanetToTexture.h  RenderPlanet.h  RenderSektor.h  RenderSolarSystem.h  RenderStellarBody.h  RenderSubPatchPlanet.h  RenderSubPlanet.h  RenderTextureToTexture.h  RenderToTexture.h
include/render/RenderToTexture/: GlobalRenderer.h  RenderInStepsToTexture.h  RenderNoisePlanetToTexture.h  RenderTextureToTexture.h  RenderToTexture.h
include/sektor/: PlanetSektor.h  RootSektor.h  Sektor.h  SolarSystemSektor.h  SubPatchPlanetSektor.h  SubPlanetSektor.h
src/: Block.cpp  BlockLoader.cpp  CMakeLists.txt  Camera.cpp  DRGeometrieHeightfield.cpp  DRGeometrieManager.cpp  DRTextureManager.cpp  GenerateNoisePlanet.cpp  GlobalRenderer.cpp  HeightMapTexture.cpp  Observer.cpp  Planet.cpp  Player.cpp  RenderBlock.cpp  RenderBlockLoader.cpp  Sektor.cpp  SektorChunk.cpp  SektorObject.cpp  Server.cpp  ShaderManager.cpp  ShaderProgram.cpp  StellarBody.cpp  Texture.cpp  Unit.cpp  main.cpp  noisecache.cpp
src/render/: GlobalRenderer.cpp  RenderBlock.cpp  RenderBlockLoader.cpp  RenderInStepsToTexture.cpp  RenderNoisePlanetToTexture.cpp  RenderPlanet.cpp  RenderSektor.cpp  RenderSolarSystem.cpp  RenderStellarBody.cpp  RenderSubPatchPlanet.cpp  RenderSubPlanet.cpp  RenderToTexture.cpp
src/render/renderToTexture/: GlobalRenderer.cpp  RenderInStepsToTexture.cpp  RenderNoisePlanetToTexture.cpp  RenderTextureToTexture.cpp  RenderToTexture.cpp
src/sektor/: PlanetSektor.cpp  RootSektor.cpp  Sektor.cpp  SolarSystemSektor.cpp  SubPatchPlanetSektor.cpp  SubPlanetSektor.cpp
vpproject/: SpaceCraft_Prototyp.vpp
